<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="admob">Kayıt bulunamadı</string>
    <string name="app_name">RTEÜ Mobil</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_delete_cekgonder">Silmek istediğinize emin misiniz?</string>
    <string name="ask_logout">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="ask_stop_yoklama">Yoklamaya hiç öğrenci katılmadı. Bitirmek istediğinize emin misiniz?</string>
    <string name="bakiye_sorgulama">Bakiye - Rezervasyon</string>
    <string name="basari_notu">Başarı Notu</string>
    <string name="belgeler">Belgeler</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="branch">Şube:</string>
    <string name="butunleme">Bütünleme</string>
    <string name="buy">Satın Al</string>
    <string name="cancel">Vazgeç</string>
    <string name="cancel_yoklama">İptal Et</string>
    <string name="cek_gonder_deleted">Gönderi silindi.</string>
    <string name="cek_gonder_list">Çek Gönder Listesi</string>
    <string name="cek_gonder_success">Mesajınız iletildi.</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear" />
    <string name="closed">Kapalı</string>
    <string name="closed_reservation">Seçilen hafta rezervasyona kapalıdır.</string>
    <string name="code">Kod</string>
    <string name="com.crashlytics.android.build_id">176c1206-6eff-45e0-9d11-1809d8163806</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Onayla</string>
    <string name="confirm_doc">Belge Görüntüle</string>
    <string name="confirmed">Onaylananlar</string>
    <string name="continuee">İleri</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="custom_header_not_created">Custom header was not created</string>
    <string name="date_">Tarih:</string>
    <string name="default_web_client_id">859019237269-9gt9eecseposktbgmae209bhelrt7fv3.apps.googleusercontent.com</string>
    <string name="ders_programi">Ders Programı</string>
    <string name="devamsizlik_detay">Devamsızlık Detay</string>
    <string name="devamsizlik_durumu">Devamsızlık Durumu</string>
    <string name="document_no_">Belge No:</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="duyurular">Duyurular</string>
    <string name="email">E-posta</string>
    <string name="ending">bitiş</string>
    <string name="enter_item_name_position">Enter the item name position</string>
    <string name="err_unexpected">Beklenmeyen bir hata oluştu</string>
    <string name="etkinlik">Etkinlik</string>
    <string name="evrak_arama">Evrak Arama</string>
    <string name="evrak_no">Evrak no</string>
    <string name="exam_name">Sınav Adı</string>
    <string name="exam_type">Sınav Tipi</string>
    <string name="exp_email">ÖR: isim@erdogan.edu.tr</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="finall">Final</string>
    <string name="firebase_database_url">https://rte-mobil.firebaseio.com</string>
    <string name="friday">Cuma</string>
    <string name="full">Dolu</string>
    <string name="gcm_defaultSenderId">859019237269</string>
    <string name="get_camera_permission">"RTEÜ Mobil'in kameranızı kullanmasına izin ver"</string>
    <string name="get_credit">Para Yükleme</string>
    <string name="get_credit_url">http://sks.idari.erdogan.edu.tr/tr/payment</string>
    <string name="get_location_permission">"RTEÜ Mobil'in konumunuzu kullanmasına izin ver"</string>
    <string name="giris_yap">GİRİŞ YAPIN</string>
    <string name="google_api_key">AIzaSyD24x7MubSA4O8d778hFyxsJ-HjeqFhkj4</string>
    <string name="google_app_id">1:859019237269:android:f1d37931d7e245d8</string>
    <string name="google_crash_reporting_api_key">AIzaSyD24x7MubSA4O8d778hFyxsJ-HjeqFhkj4</string>
    <string name="google_storage_bucket">rte-mobil.appspot.com</string>
    <string name="harf_notu">Harf Notu</string>
    <string name="header_not_created">Header was not created</string>
    <string name="home">Anasayfa</string>
    <string name="inbox_doc">Gelen Belgeler</string>
    <string name="info">Bilgi</string>
    <string name="invalid_email">Geçerli bir email adresi giriniz</string>
    <string name="invalid_password">Parolanız alanı boş bırakılamaz</string>
    <string name="join">Yoklamaya Katıl</string>
    <string name="lab">Kalan Lab</string>
    <string name="lab_absenteeism_hours">Laboratuvar,Uygulama Devamsızlık</string>
    <string name="lesson">Ders</string>
    <string name="lesson_name">Ders Adı</string>
    <string name="lesson_type_">Ders Tipi:</string>
    <string name="list_hide_item">The list is empty or has not been created</string>
    <string name="list_null_or_empty">List of null or empty names. Solution: mListNameItem = new ArrayList &lt;> (); mListNameItem.add (position, R.string.name);</string>
    <string name="monday">Pazartesi</string>
    <string name="my_rezervation">Rezervasyon Yaptınız</string>
    <string name="no">Hayır</string>
    <string name="no_connection">İnternet bağlantısı bulunmamaktadır</string>
    <string name="no_opened_yoklama">Şuan için katılabileceğiniz hiç yoklama yok!</string>
    <string name="not">Not</string>
    <string name="not_detay">YİD Detay</string>
    <string name="not_found">Kayıt bulunamadı</string>
    <string name="not_goruntuleme">Not Görüntüleme</string>
    <string name="not_joined_">Katılmayan</string>
    <string name="not_katkı">Katkısı(%)</string>
    <string name="notconfirmed">Onay Bekleyenler</string>
    <string name="notifications">Bildirimler</string>
    <string name="ode_gec">Öde Geç</string>
    <string name="ok">Tamam</string>
    <string name="ok_">Ok</string>
    <string name="onay_bekleyen_belgeler">Onay Bekleyen Belgeler</string>
    <string name="open">Aç</string>
    <string name="open_gps">Konum tespit edilmedi.Konum servisinizi etkinleştiriniz</string>
    <string name="oturumu_kapat">Oturumu Kapat</string>
    <string name="outbox_doc">Giden Belgeler</string>
    <string name="pager_bullet_separator" formatted="false">%s / %s</string>
    <string name="parafla">Parafla</string>
    <string name="password">Parola</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="period">Dönem</string>
    <string name="remember">Beni Hatırla</string>
    <string name="total_student_count">Öğrenci Sayısı</string>
    <string name="year">Yıl</string>
    <string name="yoklama_baslat">Yoklama Başlat</string>
    <string name="yoklama_bitir">Yoklamayı Tamamla</string>
    <string name="yoklama_hours_">Yoklama Saati:</string>
    <string name="yoklama_status_">Yoklama Durumu:</string>
</resources>