<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_timeline" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_join" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/rl_yok_top" android:background="@drawable/bg_corner_white_5_layout" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <Spinner android:id="@id/sp_lessons" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/lesson" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_details_top" android:background="@drawable/bg_corner_white_5_layout" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/rl_yok_top" android:layout_alignParentLeft="true">
            <TextView android:textColor="@color/nliveo_colorPrimary" android:gravity="start" android:id="@id/tv_lesson_status_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/lesson_type_" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:gravity="start" android:id="@id/tv_lesson_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="--" android:layout_toRightOf="@id/tv_lesson_status_" android:layout_alignParentTop="true" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:textColor="@color/nliveo_colorPrimary" android:gravity="start" android:id="@id/tv_total_count_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/yoklama_hours_" android:layout_below="@id/tv_lesson_type" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:gravity="start" android:id="@id/tv_yoklama_hour" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="--" android:layout_toRightOf="@id/tv_total_count_" android:layout_below="@id/tv_lesson_type" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:textColor="@color/nliveo_colorPrimary" android:gravity="start" android:id="@id/tv_branch_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/branch" android:layout_below="@id/tv_yoklama_hour" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:gravity="start" android:id="@id/tv_branch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="--" android:layout_toRightOf="@id/tv_branch_" android:layout_below="@id/tv_yoklama_hour" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:textColor="@color/nliveo_colorPrimary" android:gravity="start" android:id="@id/tv_joined_count_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/yoklama_status_" android:layout_below="@id/tv_branch" android:layout_alignTop="@id/tv_teacher" android:layout_alignBottom="@id/tv_teacher" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:gravity="start" android:id="@id/tv_yoklama_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="--" android:layout_toRightOf="@id/tv_joined_count_" android:layout_below="@id/tv_branch" android:fontFamily="@font/proxima_nova_regular" />
            <View android:id="@id/seperator" android:background="@color/bg_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/tv_yoklama_status" />
            <FrameLayout android:id="@id/ll_meal_buttons" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_below="@id/seperator">
                <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:gravity="center" android:id="@id/btn_join" android:background="@drawable/bg_corner_end_yoklama" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/join" android:drawableLeft="@drawable/ic_action_check" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_regular" rv_centered="true" />
                <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/bg_corner_pink" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:drawableLeft="@drawable/ic_action_clear" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_regular" rv_centered="true" />
            </FrameLayout>
        </RelativeLayout>
        <TextView android:gravity="center" android:id="@id/tv_select" android:background="@drawable/bg_corner_white_5_layout" android:padding="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/not_found" android:layout_below="@id/rl_yok_top" android:layout_alignParentLeft="true" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:progressBarStyle" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_permission" android:background="@color/bg_timeline" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="19.0sp" android:typeface="sans" android:textStyle="bold" android:textColor="@color/textGrey" android:gravity="center" android:id="@id/tv_permission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/get_location_permission" android:fontFamily="@font/proxima_nova_regular" />
        <TextView android:textSize="19.0sp" android:typeface="sans" android:textColor="@color/nliveo_colorPrimary" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_open_permission" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open" android:fontFamily="@font/proxima_nova_regular" />
        <TextView android:textSize="19.0sp" android:typeface="sans" android:textColor="@color/nliveo_colorPrimary" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_open_gps" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open" android:fontFamily="@font/proxima_nova_regular" />
    </LinearLayout>
</RelativeLayout>