<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_details_started" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_details" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
        <RelativeLayout android:id="@id/rl_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_weight="1.0" android:layout_alignParentLeft="true">
            <TextView android:textSize="14.0sp" android:textColor="@color/rteu_grey_dark" android:gravity="start" android:id="@id/tv_total_count_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/total_student_count" android:layout_alignParentTop="true" android:fontFamily="@font/proxima_nova_semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/rteu_yoklama" android:gravity="start" android:id="@id/tv_total_count" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="--" android:layout_toRightOf="@id/tv_total_count_" android:fontFamily="@font/proxima_nova_semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/rteu_grey_dark" android:gravity="start" android:id="@id/tv_notjoined_count_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/not_joined_" android:layout_below="@id/tv_total_count" android:layout_alignTop="@id/tv_teacher" android:layout_alignBottom="@id/tv_teacher" android:fontFamily="@font/proxima_nova_semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/rteu_pink" android:gravity="start" android:id="@id/tv_unjoined_count" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="--" android:layout_toRightOf="@id/tv_notjoined_count_" android:layout_below="@id/tv_total_count" android:fontFamily="@font/proxima_nova_semibold" />
        </RelativeLayout>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/rteu_orange" android:gravity="center" android:id="@id/tv_timer" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0" android:fontFamily="@font/proxima_nova_semibold" />
    </LinearLayout>
    <RelativeLayout android:id="@id/rl_student" android:background="@color/transparent" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:layout_above="@id/ll_meal_buttons" android:layout_below="@id/ll_details">
        <ListView android:id="@id/lv_students" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:dividerHeight="8.0dip" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/ll_meal_buttons" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_alignParentBottom="true">
        <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:gravity="center" android:id="@id/rv_open_id" android:background="@drawable/bg_corner_green_button" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/yoklama_baslat" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_semibold" rv_centered="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_close" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:gravity="center" android:id="@id/btn_close" android:background="@drawable/bg_corner_end_yoklama" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/yoklama_bitir" android:layout_weight="1.0" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_semibold" rv_centered="true" />
            <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/bg_corner_pink" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/cancel_yoklama" android:layout_weight="1.0" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_semibold" rv_centered="true" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>