<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/nliveo_colorPrimary" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llicons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_above="@id/rl_main">
            <ImageView android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minHeight="50.0dip" android:layout_weight="1.0" app:srcCompat="@drawable/ic_rte_home_logo" />
            <ImageView android:id="@id/imageView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="45.0dip" android:layout_weight="1.0" app:srcCompat="@drawable/ic_rte_title" />
        </LinearLayout>
        <RelativeLayout android:id="@id/rl_main" android:padding="20.0dip" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ProgressBar android:id="@id/pb_login" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/tv_email_login" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:layout_marginRight="20.0dip" android:text="@string/email" android:layout_alignParentLeft="true" android:textAllCaps="true" android:fontFamily="@font/proxima_nova_semibold" />
            <EditText android:textSize="14.0sp" android:textColor="#ffffffff" android:textColorHint="@color/white_56" android:id="@id/et_email" android:background="@android:color/transparent" android:paddingLeft="14.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="23.0dip" android:hint="@string/exp_email" android:ems="10" android:singleLine="true" android:layout_toRightOf="@id/tv_email_login" android:layout_alignBaseline="@id/tv_email_login" android:inputType="textEmailAddress" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:id="@id/tv_separator_login" android:background="@color/white" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:layout_below="@id/tv_email_login" />
            <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/tv_password_login" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" android:layout_below="@id/tv_separator_login" android:layout_alignLeft="@id/tv_separator_login" android:textAllCaps="true" android:fontFamily="@font/proxima_nova_semibold" />
            <EditText android:textSize="14.0sp" android:textColor="#ffffffff" android:textColorHint="@color/white_56" android:id="@id/et_password" android:background="@android:color/transparent" android:paddingLeft="14.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:hint="******" android:ems="10" android:singleLine="true" android:layout_below="@id/tv_separator_login" android:layout_alignBaseline="@id/tv_password_login" android:layout_alignLeft="@id/et_email" android:layout_alignParentRight="true" android:inputType="textPassword" android:fontFamily="@font/proxima_nova_regular" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/cb_remember" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:checked="false" android:text="@string/remember" android:layout_below="@id/tv_password_login" android:layout_alignRight="@id/tv_separator_login" android:layout_centerHorizontal="true" android:fontFamily="@font/proxima_nova_regular" />
            <Switch android:theme="@style/switchStyle" android:id="@id/sw_remember" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:layout_toLeftOf="@id/cb_remember" android:layout_below="@id/tv_password_login" />
        </RelativeLayout>
        <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:id="@id/btn_login" android:background="@drawable/bg_corner_primarycoloralpha_button" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/giris_yap" android:layout_below="@id/rl_main" android:textAllCaps="false" android:fontFamily="@font/proxima_nova_semibold" rv_centered="true" />
    </RelativeLayout>
</ScrollView>